--- a/HTML/表单/按钮.html
+++ b/HTML/表单/按钮.html
@@ -5,18 +5,16 @@
 	<meta charset="utf-8">
 </head>
 <body>
-	<input type="button" value="一个按钮">
+	<button>按钮</button>
 
-	<!-- 普通按钮不具备提交form的效果 -->
-	<form action="/study/login.jsp" method="get">
-		账号: <input type="text" name="name"><br/>
-		密码: <input type="password" name="password"><br/>
-		<input type="button" value="登陆">
+	<!-- button里是图片 -->
+	<button><img src="../../image/example.gif"></button>
+
+	<!-- 提交数据 -->
+	<form action="/study/login.jsp">
+		账号: <input type="text" name="name">
+		密码: <input type="password" name="password">
+		<button type="submit">登陆</button>
 	</form>
-
-	<!--
-		button是普通按钮
-		submit是提交按钮
-	-->
 </body>
 </html>
